--- a/docs-book/master_middleman/source/subnavs/a9s-mysql_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/a9s-mysql_subnav.erb
@@ -5,21 +5,57 @@
   <div class="nav-content">
     <ul>
       <li>
-        <a id='home-nav-link' href="/a9s-mysql/index.html">a9s MySQL for PCF (Beta)</a>
+        <div class="menu-title">a9s MySQL for PCF</div>
       </li>
 
       <li>
-        <a href="/a9s-mysql/installing.html">Installing and Configuring a9s MySQL for PCF</a>
-      </li>
-
-      <li>
-        <a href="/a9s-mysql/using.html">Using a9s MySQL for PCF</a>
+        <a id='home-nav-link' href="/a9s-mysql/index.html">About a9s MySQL for PCF</a>
       </li>
 
       <li>
         <a href="/a9s-mysql/release-notes.html">Release Notes</a>
       </li>
+
+      <li>
+        <div class="menu-title">Operator Guide</div>
+      </li>
+
+      <li>
+        <a href="/a9s-mysql/installing.html">Installing and Configuring</a>
+      </li>
+
+      <li>
+        <a href="/a9s-mysql/update-instances.html">Update Existing Service Instances</a>
+      </li>
+
+      <li>
+        <a href="/a9s-mysql/backup.html">Backup and Restore</a>
+      </li>
+
+      <li>
+        <a href="/a9s-mysql/name-resolving.html">Name Resolving</a>
+      </li>
+
+      <li>
+        <div class="menu-title">Developer Guide</div>
+      </li>
+
+      <li>
+        <a href="/a9s-mysql/using.html">Using a9s MySQL for PCF</a>
+      </li>
       
+      <li>
+        <a href="/a9s-mysql/using-services-in-apps.html">Using Services in Apps</a>
+      </li>
+
+      <li>
+        <a href="/a9s-mysql/ssl-plans.html">SSL/TLS Service Plans</a>
+      </li>
+
+      <li>
+        <a href="/a9s-mysql/a9s-service-dashboard.html">a9s Service Dashboard</a>
+      </li>
+
     </ul>
   </div>
 </div><!--end of sub-nav-->
