--- a/docs-book/master_middleman/source/index.html.md.erb
+++ b/docs-book/master_middleman/source/index.html.md.erb
@@ -7,7 +7,7 @@
       <li class="panel span3">
         <a class="configure" href="a9s-mysql/index.html" id="a9s-mysql">
           <div class="prodname">
-            Your Service for PCF<br />(Beta)
+            a9s MySQL for PCF<br />(Beta)
           </div>
         </a>
       </li>
