--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -12,6 +12,7 @@ To use a9s MySQL with an application, create a service instance and bind the ser
 ### <a id='view-the-a9s-mysql-service'></a> View the a9s MySQL Service
 
 After the service is installed, you can see the `a9s-mysql` and its service plans appear in your CF marketplace. Run `cf marketplace` to see the service listing:
+
 ```bash
 $ cf marketplace
 Getting services from marketplace in org test / space test as admin...
@@ -106,7 +107,7 @@ System-Provided:
 
 You can use the host_ips, username, and password values to connect to your database with a MySQL client.
 
-a9s MySQL for PCF comes with its own Consul cluster to provide hostname resolving. When your DNS is configured to resolve the a9s MySQL for PCF service instance domains, you can make use of `hosts` or `uri`. For more information, see [Name Resolving With Consul](./installing.html#name-resolving-with-consul).
+a9s MySQL for PCF comes with its own Consul cluster to provide hostname resolving. When your DNS is configured to resolve the a9s MySQL for PCF service instance domains, you can make use of `hosts` or `uri`. For more information, see [Name Resolving With Consul](./name-resolving.html#name-resolving-with-consul).
 
 
 ## <a id='delete-an-a9s-mysql-service-instance'></a> Delete an a9s MySql Service Instance
@@ -172,7 +173,7 @@ Here are the plans you can upgrade to, depending on the one you are currently us
 
 ## <a id='add-a-graphite-endpoint'></a> Add a Graphite Endpoint
 
-If you want to monitor your service with Graphite, you can set an endpoint to where to information will be sent with the `cf update-service` command. This command expects the [-c flag](https://docs.cloudfoundry.org/devguide/services/managing-services.html#arbitrary-params-binding) and a JSON string containing the `graphite` and `metrics_prefix` keys. Depending on your Graphite provider, the `metrics_prefix` might require that each metric must start with an API key in their name. You can also change the interval when the data is send to the endpoint. To do this, modify `interval`; the default is 10s.
+If you want to monitor your service with Graphite, you can set an endpoint to where the information will be sent with the `cf update-service` command. This command expects the [-c flag](https://docs.cloudfoundry.org/devguide/services/managing-services.html#arbitrary-params-binding) and a JSON string containing the `graphite` and `metrics_prefix` keys. Depending on your Graphite provider, the `metrics_prefix` might require that each metric must start with an API key in their name. You can also change the interval when the data is send to the endpoint. To do this, modify `interval`; the default is 10s.
 
 ```bash
 $ cf update-service my-mysql-service -c '{ "graphite": ["yourspace.your-graphite-endpoint.com:12345"], "metrics_prefix": "your-api-key.my-cluster-mysql", "interval": "5"}'
@@ -181,7 +182,7 @@ $ cf update-service my-mysql-service -c '{ "graphite": ["yourspace.your-graphite
 
 ## <a id='add-a-syslog-endpoint'></a> Add a Syslog Endpoint
 
-The `cf update-service` command used with the [-c flag](https://docs.cloudfoundry.org/devguide/services/managing-services.html#arbitrary-params-binding) can let you stream your syslog to a third-party service. In this case, the command expects a JSON string containing the `syslog` key. You can also change the interval for the syslog with the same key than for the Graphite endpoint `interval`.
+The `cf update-service` command used with the [-c flag](https://docs.cloudfoundry.org/devguide/services/managing-services.html#arbitrary-params-binding) can let you stream your logs to a third-party service. In this case, the command expects a JSON string containing the `syslog` key. You can also change the interval for the syslog with the same key than for the Graphite endpoint `interval`.
 
 ```bash
 $ cf update-service my-mysql-service -c '{ "syslog": ["logs4.your-syslog-endpoint.com:54321"], "interval": "5" }'
@@ -207,7 +208,7 @@ ca16f111-5073-40b7-973a-156c75dd3028
 
 To see all available security groups, run `cf security-groups`.
 
-```
+```bash
 $cf security-groups
 Getting security groups as demo@anynines.com
 OK
